--- a/styles.css
+++ b/styles.css
@@ -24,8 +24,6 @@ nav{
 	align-items: center;
 	position: fixed;
 	z-index: 1;
-	/* left: 50%; */
-	/* margin-left: -250px; */
 	background-color: #010307;
 	width: 100%;
 
@@ -34,8 +32,6 @@ nav{
 nav a{
 	text-decoration: none;
 	color: white;
-	/* margin-left: 2px;
-	margin-right: 2px; */
 	background-color: #010307;
 	border: none;
 	color: white;
@@ -44,7 +40,6 @@ nav a{
 	text-decoration: none;
 	display: inline-block;
 	font-size: 16px;
-	/* float: left; */
 }
 
 a:hover {
@@ -112,13 +107,12 @@ a:hover {
 	min-height: 400px;
 }
 
-/* #wrapper{
-	width: 500px;
-	height: calc(100vh-20px);
-} */
+#goodsDropdown{
+	width: 100%;
+	padding: 15px;
+}
 
-@media only screen and (max-width: 900px) {
-	#about > div {
-		padding: 20px;
-	}
-  }
+#servicesDropdown{
+	width: 100%;
+	padding: 15px;
+}
